unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/ET_Finance_Document_LineItem__c.object-meta.xml
<CustomObject>
    <label>Finance Document Line Item</label>
    <nameField>
        <displayFormat>FLINE-{0000000}</displayFormat>
        <label>Finance Document LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Document Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>