unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>ET_Activity_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>