unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>