unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>ET_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Document_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>