unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Department__c.field-meta.xml
<CustomField>
    <fullName>ET_Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>