unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Description__c.field-meta.xml
<CustomField>
    <fullName>ET_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>