unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Finance_Document__c.field-meta.xml
<CustomField>
    <fullName>ET_Finance_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Document</label>
    <referenceTo>ET_Finance_Document__c</referenceTo>
    <relationshipLabel>Finance Document Line Items</relationshipLabel>
    <relationshipName>Finance_Document_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>