unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>ET_Invoice_Count__c</fullName>
    <label>Invoice Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>