unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>