unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Project__c.field-meta.xml
<CustomField>
    <fullName>ET_Project__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>