unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>