unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>