unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>ET_Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>