unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/ET_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Tax_Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Rate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>