unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Document Line Items</relationshipLabel>
    <relationshipName>Finance_Document_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>