unpackaged/main/default/objects/ET_Finance_Document_LineItem__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>ETST_School__c</referenceTo>
    <relationshipLabel>Finance Document Line Items</relationshipLabel>
    <relationshipName>Finance_Document_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>